# cpp-snake-skeleton

./: CMakeLists.txt  main.cpp
include/: food.h
src/: food.cpp  internals.cpp
